<package format="2">
  <name>controlers</name>
  <version>1.0.0</version>
  <description>
  This package provides controlers capability.
  </description>
  <maintainer email="jd.serranom@uniandes.edu.co">Juan David Serrano</maintainer>
  <maintainer email="ma.escalante@uniandes.edu.co">Maria Alejandra Escalante</maintainer>
  <maintainer email="jf.gaviria@uniandes.edu.co">Juan Felipe Gaviria</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>master_msgs</depend>

  <!--<build_depend>message_generation</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>master_msgs</build_export_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>master_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>-->

</package>
